--- a/cli/package.json
+++ b/cli/package.json
@@ -6,5 +6,16 @@
   "repository": "https://github.com/rishiosaur/rishi",
   "author": "Rishi Kotharo",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "bin": {
+    "rishi": "./index.js"
+  },
+  "dependencies": {
+    "chalk": "^4.0.0",
+    "figlet": "^1.4.0",
+    "gradient-string": "^1.2.0",
+    "inquirer": "^7.1.0",
+    "nodemailer": "^6.4.6",
+    "open": "^7.0.3"
+  }
 }
