--- a/cli/package.json
+++ b/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rishi",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "The CLI that's all about me",
   "main": "./dist/index.js",
   "repository": "https://github.com/rishiosaur/rishi",
@@ -8,7 +8,7 @@
   "license": "MIT",
   "private": false,
   "bin": {
-    "rishi": "./dist/index.js"
+    "rishi": "./index.js"
   },
   "scripts": {
     "o": "javascript-obfuscator index-real.js --output index.js --split-strings true --split-strings-chunk-length 1 --rotate-string-array true --string-array-encoding true --shuffle-string-array true"
