--- a/cli/package.json
+++ b/cli/package.json
@@ -19,6 +19,7 @@
     "gradient-string": "^1.2.0",
     "inquirer": "^7.1.0",
     "nodemailer": "^6.4.6",
-    "open": "^7.0.3"
+    "open": "^7.0.3",
+    "terminal-image": "^1.0.0"
   }
 }
